# localizer

./: .gitignore  README.md  netlify.toml  pyproject.toml
.github/workflows/: scrape.yml  test.yml
data/: latest-digest.txt  rfps.db
localizer/: __init__.py  cli.py  dashboard.py  db.py  digest.py  email.py  scoring.py
localizer/scrapers/: __init__.py  base.py  metro.py  multnomah.py  oregon_buys.py  port_of_portland.py  portland.py  trimet.py
tests/: test_db.py  test_scoring.py  test_scrapers.py
