[project]
name = "localizer"
version = "0.1.0"
description = "Portland-area government RFP monitoring scraper"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
    "sqlite-utils>=3.36",
    "rich>=13.0",
    "click>=8.1",
    "apscheduler>=3.10",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3"]

[project.scripts]
localizer = "localizer.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
